# django-menu

./: README.md  pyproject.toml
