[tool.poetry]
name = "django-menu"
version = "0.1.0"
description = ""
authors = ["Evgeny Zakiev <zakiev_e@mail.ru>"]
readme = "README.md"
packages = [{include = "django_menu"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
sqlparse = "^0.4.4"
django-mptt = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
